# Slay-the-Spire-2-Card-Maker

./: .gitignore  ASSET_LICENSE.md  LICENSE  README.md  pyproject.toml
assets/: manifest.json
src/sts2_card_maker/: gui.py  main.py  models.py  renderer.py
